add profile, publication

--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,8 +1,11 @@
 {% if site.data.profile.interests %}
-  <p class="title">{{ site.theme_settings.interests_title }}</p>
-  <ul class="interests-list">
+<p class="title">{{ site.theme_settings.interests_title }}</p>
+<ul class="interests-list">
     {% for interest in site.data.profile.interests %}
-    <li class="interest">{{ interest }}</li>
+    <li class="meta">
+        <p class="description">{{ interest.experience }}</p>
+        <p class="program">{{ interest.program }}</p>
+    </li>
     {% endfor %}
-  </ul>
+</ul>
 {% endif %}
