--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,11 +1,12 @@
 {% if site.data.profile.experience %}
-  <p class="title">{{ site.theme_settings.experience_title }}</p>
-  <ul class="exper-list">
+<p class="title">{{ site.theme_settings.experience_title }}</p>
+<ul class="exper-list">
     {% for exp in site.data.profile.experience %}
     <li class="meta">
-      <p class="date">{{ exp.start }} &ndash; {{ exp.end }}</p>
-      <p class="description">{{ exp.experience }}</p>
+        <p class="date">{{ exp.start }} &ndash; {{ exp.end }}</p>
+        <p class="description">{{ exp.experience }}</p>
+        <p class="program">{{ exp.program }}</p>
     </li>
     {% endfor %}
-  </ul>
+</ul>
 {% endif %}
