--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -20,7 +20,10 @@ layout: page
       </div>
       <div class="text-wrap col-12 col-md-8">
         <h2 class="username">{{ profile.username }}</h2>
-        <div class="description">{{ profile.description | markdownify }}</div>
+        <div class="description">{{ profile.description | markdownify }}</div>  
+        <div class="interest">{{ profile.interest | markdownify }}</div>
+        <div class="outside-work">{{ profile.outside-work | markdownify }}</div>
+        <div class="call-for-work">{{ profile.call-for-work | markdownify }}</div>
 
         <ul id="icons">
           {% include social.html %}
@@ -33,11 +36,11 @@ layout: page
   <section id="career" class="row">
     <article class="exper col-12 col-md-6">
       {% include experience.html %}
-      {% include awards.html %}
     </article>
     <article class="skills col-12 col-md-6">
       {% include interests.html %}
-      {% include skills.html %}
+      {% include awards.html %}
+
     </article>
   </section>
 
